<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginTop="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/notification"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_set_privacy"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/set_privacy"
                android:gravity="center_vertical"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/terms"
                android:gravity="center_vertical"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/policy"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/personal_info"
                android:gravity="center_vertical"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/inquire"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/send_inquiry"
                android:gravity="center_vertical"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/license"
                android:gravity="center_vertical"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/secession"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/secession"
                android:textColor="@color/light_red"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/logout"
                android:gravity="center_vertical"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>