<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="NftMetadataActivityViewModel"
            type="com.draw.free.nft.viewmodel.NftMetadataActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:padding="10dp"
                android:src="@drawable/icon_back"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/nft_detail"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:src="@drawable/icon_next"
                app:tint="@color/blue" />

        </androidx.appcompat.widget.Toolbar>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/sign_up_progressbar"
            android:scaleY="0.7"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nft_title"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/progress_bar" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_nft_title"
            android:text="@={NftMetadataActivityViewModel.MTitle}"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/tv_title_notice"
            android:textSize="10sp"
            android:text="@string/notice_long"
            android:textColor="@color/light_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txt_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nft_symbol"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_notice" />

        <EditText
            android:id="@+id/et_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_nft_symbol"
            android:text="@={NftMetadataActivityViewModel.MSymbol}"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/txt_symbol"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/tv_symbol_notice"
            android:textSize="10sp"
            android:text="@string/notice_long"
            android:textColor="@color/light_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_symbol"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nft_desc"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tv_symbol_notice" />

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start|top"
            android:hint="@string/hint_nft_desc"
            android:text="@={NftMetadataActivityViewModel.MDesc}"
            android:inputType="textMultiLine"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="13sp"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintTop_toBottomOf="@id/txt_desc"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/tv_desc_notice"
            android:textSize="10sp"
            android:text="@string/notice_long"
            android:textColor="@color/light_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_desc"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txt_creator_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nft_creator_fee"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_notice" />

        <TextView
            android:id="@+id/txt_creator_fee_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="20dp"
            android:text="@string/notice_creator_fee"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/txt_creator_fee"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/feeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/txt_creator_fee_2">

            <EditText
                android:id="@+id/et_creator_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/hint_nft_creator_fee"
                android:text="@={NftMetadataActivityViewModel.MCreatorFee}"
                android:inputType="numberDecimal|number"
                android:maxLength="5"
                android:maxLines="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="13sp"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/txt_percent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/percent"
                android:textSize="20sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_fee_notice"
            android:textSize="10sp"
            tools:text="최대 길이를 초과하였습니다"
            android:textColor="@color/light_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/feeLayout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>