<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_back"
                android:padding="10dp"
                android:layout_gravity="start"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_drawing"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:layout_gravity="end"
                android:textColor="@color/blue"/>

        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/title_hint"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="18dp"
            android:textSize="15sp"
            android:backgroundTint="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <CheckedTextView
            android:id="@+id/chk_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_closed"
            android:textSize="13sp"
            android:textColor="@drawable/set_closed_textcolor_selector"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:checkMark="@drawable/set_closed_checked_selector"
            app:layout_constraintTop_toBottomOf="@id/et_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/content_hint"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:padding="15dp"
            android:textSize="13sp"
            android:gravity="top|start"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toBottomOf="@id/chk_closed"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"/>

        <EditText
            android:id="@+id/et_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/icon_location_ground"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/place_hint"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:textSize="13sp"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/et_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>